--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,158 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body, h1, h2, h3, h4, h5, p, a, i{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+    padding: 2rem 1rem;
+    background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,1));
+}
+nav h1{
+    color: rgb(226, 43, 113);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    letter-spacing: 2px;
+    text-shadow: 0 4px 4px grey;
+}
+
+.searchBar{    
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 1rem;
+}
+
+form h3{
+    position: relative;
+    top: 1.6rem;
+    left: 1.5rem;
+    width: 7.5rem;
+    padding: 0 5px;
+    background-color:rgb(255, 255, 255);
+    color: rgb(226, 43, 113);
+    font-size: 1rem;
+    font-weight: 100;
+    letter-spacing: 1px;      
+}
+input{
+    margin: 1rem 0;
+    padding: 0 1rem ;
+    width: 250px; 
+    height: 2rem; 
+    border: 2px solid rgb(226, 43, 113);
+    border-radius: 50px;
+    font-size: 1rem;    
+}
+input:focus{
+    outline: none;
+}
+
+/* VIDEO LIST */
+.header{
+    margin: 0 0 2rem 0;
+    text-align: center;
+    font-size: 1.2rem; 
+    font-weight: bold;   
+    letter-spacing: 1px;
+    color: rgb(226, 43, 113);    
+}
+.card-container{
+    padding: 0 1rem;
+}
+
+/*VIDEO ITEMS*/
+.card{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2fr, 1fr);    
+    place-items: center; 
+    max-width: 400px;
+    margin: 2rem auto;
+    /* padding: .5rem; */
+    border-radius: 5px;
+    background: rgba(0,0,0,.1); 
+    transition: all .3s ease-in;    
+}
+.card:hover{
+    background: rgba(0,0,0,1); 
+    cursor: pointer;   
+}
+.card:hover .card-body h3, .card:hover .card-body p{
+    color: aliceblue;  
+}
+.card:hover .icon{
+    opacity: 1;   
+}
+.card-body{    
+    padding: 0 .5rem;        
+}
+.card img{
+    width: 100%;    
+    justify-self: center;
+    border-top-left-radius: 5px;    
+    border-top-right-radius: 5px;
+}
+.card-body h3{
+    color: rgb(92, 91, 92);
+    margin: .5rem;
+}
+.card-body p{
+    text-align: justify;
+    color: rgb(61, 60, 61);    
+}
+.icon{
+    position: relative;
+    top: -16rem;
+    left: 40%;
+    color:tomato;
+    font-size: 4rem;
+    opacity: 0;
+    transition: all .3s ease-in-out;
+}
+/* VIDEO DETAILS */
+.video-details{
+    display: grid;
+    /* grid-template-columns: 1fr; */
+    grid-template-rows: 300px 1fr;
+    /* justify-content: center;
+    align-items: center; */    
+    margin: 1rem 0 3rem 0;
+    max-width: 1440px;   
+    margin: auto;
+}
+.video-details iframe{
+    width: 100%;
+    height: 100%; 
+}
+.video-thumbnails {
+    padding: 1rem 1rem 2.5rem 1rem; 
+    background: #000;     
+}
+.video-thumbnails h4{
+    margin-bottom: .5rem; 
+    letter-spacing: 1px;
+    color: aliceblue;      
+}
+.video-thumbnails p{    
+    letter-spacing: 1px;
+    color: aliceblue;      
+}
+/*============MEDIA QUERIES==============*/
+@media screen and (min-width: 768px){
+    .card-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 5rem 0 0 0;
+        max-width: 1170px;
+        margin: auto;
+    }
+    .video-details{
+        padding: 5rem 0 15rem 0;
+    }
+    .video-details iframe{
+        width: 100%;
+        height: 600px; 
+    }
 }
